// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TabGroup /> > Centered story renders snapshot 1`] = `
<div
  class="_tabs_5bfe90"
>
  <div
    class="_tabs__header_5bfe90"
  >
    <ul
      class="_tabs__list_5bfe90 _tabs--has-divider_5bfe90 _tabs__list--align-center_5bfe90 _tabs__list--variant-default_5bfe90"
      role="tablist"
    >
      <li
        class="_tabs__item_5bfe90 _eds-is-active_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r4:"
          aria-selected="true"
          class="_tabs__link_5bfe90"
          href="#:r4:"
          id=":r5:-Tab-Title-1"
          role="tab"
          tabindex="0"
        >
          Tab Title 1
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r4:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:r4:"
          id=":r5:-Tab-Title-2"
          role="tab"
          tabindex="-1"
        >
          Tab Title 2
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r4:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:r4:"
          id=":r5:-Tab-Title-3"
          role="tab"
          tabindex="-1"
        >
          Tab Title 3
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r4:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:r4:"
          id=":r5:-Tab-Title-4"
          role="tab"
          tabindex="-1"
        >
          Tab Title 4
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
    </ul>
  </div>
  <div>
    <div
      aria-hidden="false"
      aria-labelledby=":r5:-Tab-Title-1"
      id=":r4:"
      role="tabpanel"
    >
      <div
        class="max-w-[576px]"
      >
        <h3
          class="_text_b3eba3 _text--headline-sm_b3eba3 mb-spacing-size-3"
        >
          Tab 1
        </h3>
        <p
          class="_text_b3eba3 _text--body-md_b3eba3"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
           
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TabGroup /> > Default story renders snapshot 1`] = `
<div
  class="_tabs_5bfe90"
>
  <div
    class="_tabs__header_5bfe90"
  >
    <ul
      class="_tabs__list_5bfe90 _tabs--has-divider_5bfe90 _tabs__list--variant-default_5bfe90"
      role="tablist"
    >
      <li
        class="_tabs__item_5bfe90 _eds-is-active_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r0:"
          aria-selected="true"
          class="_tabs__link_5bfe90"
          href="#:r0:"
          id=":r1:-Tab-Title-1"
          role="tab"
          tabindex="0"
        >
          Tab Title 1
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r0:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:r0:"
          id=":r1:-Tab-Title-2"
          role="tab"
          tabindex="-1"
        >
          Tab Title 2
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r0:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:r0:"
          id=":r1:-Tab-Title-3"
          role="tab"
          tabindex="-1"
        >
          Tab Title 3
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r0:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:r0:"
          id=":r1:-Tab-Title-4"
          role="tab"
          tabindex="-1"
        >
          Tab Title 4
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
    </ul>
  </div>
  <div>
    <div
      aria-hidden="false"
      aria-labelledby=":r1:-Tab-Title-1"
      id=":r0:"
      role="tabpanel"
    >
      <div
        class="max-w-[576px]"
      >
        <h3
          class="_text_b3eba3 _text--headline-sm_b3eba3 mb-spacing-size-3"
        >
          Tab 1
        </h3>
        <p
          class="_text_b3eba3 _text--body-md_b3eba3"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
           
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TabGroup /> > InverseVariant story renders snapshot 1`] = `
<div
  class="p-spacing-size-half"
>
  <div
    class="_tabs_5bfe90"
  >
    <div
      class="_tabs__header_5bfe90"
    >
      <ul
        class="_tabs__list_5bfe90 _tabs--has-divider_5bfe90 _tabs__list--variant-inverse_5bfe90"
        role="tablist"
      >
        <li
          class="_tabs__item_5bfe90 _eds-is-active_5bfe90"
          role="presentation"
        >
          <a
            aria-controls=":r2:"
            aria-selected="true"
            class="_tabs__link_5bfe90"
            href="#:r2:"
            id=":r3:-Tab-Title-1"
            role="tab"
            tabindex="0"
          >
            Tab Title 1
            <div
              aria-hidden="true"
              class="_tab__highlight_5bfe90"
            />
          </a>
        </li>
        <li
          class="_tabs__item_5bfe90"
          role="presentation"
        >
          <a
            aria-controls=":r2:"
            aria-selected="false"
            class="_tabs__link_5bfe90"
            href="#:r2:"
            id=":r3:-Tab-Title-2"
            role="tab"
            tabindex="-1"
          >
            Tab Title 2
            <div
              aria-hidden="true"
              class="_tab__highlight_5bfe90"
            />
          </a>
        </li>
        <li
          class="_tabs__item_5bfe90"
          role="presentation"
        >
          <a
            aria-controls=":r2:"
            aria-selected="false"
            class="_tabs__link_5bfe90"
            href="#:r2:"
            id=":r3:-Tab-Title-3"
            role="tab"
            tabindex="-1"
          >
            Tab Title 3
            <div
              aria-hidden="true"
              class="_tab__highlight_5bfe90"
            />
          </a>
        </li>
        <li
          class="_tabs__item_5bfe90"
          role="presentation"
        >
          <a
            aria-controls=":r2:"
            aria-selected="false"
            class="_tabs__link_5bfe90"
            href="#:r2:"
            id=":r3:-Tab-Title-4"
            role="tab"
            tabindex="-1"
          >
            Tab Title 4
            <div
              aria-hidden="true"
              class="_tab__highlight_5bfe90"
            />
          </a>
        </li>
      </ul>
    </div>
    <div>
      <div
        aria-hidden="false"
        aria-labelledby=":r3:-Tab-Title-1"
        id=":r2:"
        role="tabpanel"
      >
        <div
          class="text-utility-inverse max-w-[576px]"
        >
          <h3
            class="_text_b3eba3 _text--headline-sm_b3eba3 mb-spacing-size-3"
          >
            Tab 1
          </h3>
          <p
            class="_text_b3eba3 _text--body-md_b3eba3"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
             
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TabGroup /> > TabWidthFull story renders snapshot 1`] = `
<div
  class="_tabs_5bfe90"
>
  <div
    class="_tabs__header_5bfe90"
  >
    <ul
      class="_tabs__list_5bfe90 _tabs--has-divider_5bfe90 _tabs__list--align-center_5bfe90 _tabs__list--variant-default_5bfe90"
      role="tablist"
    >
      <li
        class="_tabs__item_5bfe90 _eds-is-active_5bfe90 _tabs--width-full_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r6:"
          aria-selected="true"
          class="_tabs__link_5bfe90"
          href="#:r6:"
          id=":r7:-Tab-Title-1"
          role="tab"
          tabindex="0"
        >
          Tab Title 1
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90 _tabs--width-full_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r6:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:r6:"
          id=":r7:-Tab-Title-2"
          role="tab"
          tabindex="-1"
        >
          Tab Title 2
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90 _tabs--width-full_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r6:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:r6:"
          id=":r7:-Tab-Title-3"
          role="tab"
          tabindex="-1"
        >
          Tab Title 3
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90 _tabs--width-full_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r6:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:r6:"
          id=":r7:-Tab-Title-4"
          role="tab"
          tabindex="-1"
        >
          Tab Title 4
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
    </ul>
  </div>
  <div>
    <div
      aria-hidden="false"
      aria-labelledby=":r7:-Tab-Title-1"
      id=":r6:"
      role="tabpanel"
    >
      <div
        class="max-w-[576px]"
      >
        <h3
          class="_text_b3eba3 _text--headline-sm_b3eba3 mb-spacing-size-3"
        >
          Tab 1
        </h3>
        <p
          class="_text_b3eba3 _text--body-md_b3eba3"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
           
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TabGroup /> > WithTabIcons story renders snapshot 1`] = `
<div
  class="_tabs_5bfe90"
>
  <div
    class="_tabs__header_5bfe90"
  >
    <ul
      class="_tabs__list_5bfe90 _tabs--has-divider_5bfe90 _tabs__list--align-center_5bfe90 _tabs__list--variant-default_5bfe90"
      role="tablist"
    >
      <li
        class="_tabs__item_5bfe90 _eds-is-active_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r8:"
          aria-selected="true"
          class="_tabs__link_5bfe90"
          href="#:r8:"
          id=":r9:-Tab-Title-1"
          role="tab"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="_icon_779da8 _tab__icon_5bfe90"
            fill="currentColor"
            height="16px"
            style="--icon-size: 16px;"
            viewBox="0 0 24 24"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.19625 17.4845C7.04625 16.873 7.94817 16.3894 8.902 16.0337C9.85583 15.6779 10.8885 15.5 12 15.5C13.1115 15.5 14.1442 15.6779 15.098 16.0337C16.0518 16.3894 16.9538 16.873 17.8038 17.4845C18.4641 16.8012 18.9952 15.9942 19.397 15.0635C19.799 14.1327 20 13.1115 20 12C20 9.78333 19.2208 7.89583 17.6625 6.3375C16.1042 4.77917 14.2167 4 12 4C9.78333 4 7.89583 4.77917 6.3375 6.3375C4.77917 7.89583 4 9.78333 4 12C4 13.1115 4.201 14.1327 4.603 15.0635C5.00483 15.9942 5.53592 16.8012 6.19625 17.4845ZM12.0005 12.5C11.1578 12.5 10.4471 12.2108 9.86825 11.6323C9.28942 11.0538 9 10.3432 9 9.5005C9 8.65783 9.28925 7.94708 9.86775 7.36825C10.4462 6.78942 11.1568 6.5 11.9995 6.5C12.8422 6.5 13.5529 6.78925 14.1318 7.36775C14.7106 7.94625 15 8.65683 15 9.4995C15 10.3422 14.7107 11.0529 14.1322 11.6317C13.5537 12.2106 12.8432 12.5 12.0005 12.5ZM12 21C10.7448 21 9.56983 20.7663 8.475 20.299C7.38017 19.8317 6.42758 19.1929 5.61725 18.3828C4.80708 17.5724 4.16833 16.6198 3.701 15.525C3.23367 14.4302 3 13.2552 3 12C3 10.7448 3.23367 9.56983 3.701 8.475C4.16833 7.38017 4.80708 6.42758 5.61725 5.61725C6.42758 4.80708 7.38017 4.16833 8.475 3.701C9.56983 3.23367 10.7448 3 12 3C13.2552 3 14.4302 3.23367 15.525 3.701C16.6198 4.16833 17.5724 4.80708 18.3828 5.61725C19.1929 6.42758 19.8317 7.38017 20.299 8.475C20.7663 9.56983 21 10.7448 21 12C21 13.2552 20.7663 14.4302 20.299 15.525C19.8317 16.6198 19.1929 17.5724 18.3828 18.3828C17.5724 19.1929 16.6198 19.8317 15.525 20.299C14.4302 20.7663 13.2552 21 12 21ZM12 20C12.9218 20 13.8289 19.8388 14.7212 19.5163C15.6134 19.1939 16.3845 18.7526 17.0345 18.1923C16.3845 17.6704 15.6326 17.2579 14.7788 16.9548C13.9249 16.6516 12.9987 16.5 12 16.5C11.0013 16.5 10.0718 16.6484 9.2115 16.9453C8.35133 17.2421 7.60267 17.6578 6.9655 18.1923C7.6155 18.7526 8.38658 19.1939 9.27875 19.5163C10.1711 19.8388 11.0782 20 12 20ZM12 11.5C12.5615 11.5 13.0352 11.3071 13.4212 10.9212C13.8071 10.5352 14 10.0615 14 9.5C14 8.9385 13.8071 8.46475 13.4212 8.07875C13.0352 7.69292 12.5615 7.5 12 7.5C11.4385 7.5 10.9647 7.69292 10.5787 8.07875C10.1929 8.46475 10 8.9385 10 9.5C10 10.0615 10.1929 10.5352 10.5787 10.9212C10.9647 11.3071 11.4385 11.5 12 11.5Z"
            />
          </svg>
          Tab Title 1
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r8:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:r8:"
          id=":r9:-Tab-Title-2"
          role="tab"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="_icon_779da8 _tab__icon_5bfe90"
            fill="currentColor"
            height="16px"
            style="--icon-size: 16px;"
            viewBox="0 0 24 24"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.5 12.5H6.5C6.35833 12.5 6.23958 12.452 6.14375 12.356C6.04792 12.26 6 12.1411 6 11.9993C6 11.8574 6.04792 11.7388 6.14375 11.6433C6.23958 11.5478 6.35833 11.5 6.5 11.5H11.5V6.5C11.5 6.35833 11.548 6.23958 11.644 6.14375C11.74 6.04792 11.8589 6 12.0008 6C12.1426 6 12.2612 6.04792 12.3567 6.14375C12.4522 6.23958 12.5 6.35833 12.5 6.5V11.5H17.5C17.6417 11.5 17.7604 11.548 17.8563 11.644C17.9521 11.74 18 11.8589 18 12.0008C18 12.1426 17.9521 12.2612 17.8563 12.3567C17.7604 12.4522 17.6417 12.5 17.5 12.5H12.5V17.5C12.5 17.6417 12.452 17.7604 12.356 17.8563C12.26 17.9521 12.1411 18 11.9993 18C11.8574 18 11.7388 17.9521 11.6433 17.8563C11.5478 17.7604 11.5 17.6417 11.5 17.5V12.5Z"
            />
          </svg>
          Tab Title 2
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r8:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:r8:"
          id=":r9:-Tab-Title-3"
          role="tab"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="_icon_779da8 _tab__icon_5bfe90"
            fill="currentColor"
            height="16px"
            style="--icon-size: 16px;"
            viewBox="0 0 24 24"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.5 12.5H6.5C6.35833 12.5 6.23958 12.452 6.14375 12.356C6.04792 12.26 6 12.1411 6 11.9993C6 11.8574 6.04792 11.7388 6.14375 11.6433C6.23958 11.5478 6.35833 11.5 6.5 11.5H11.5V6.5C11.5 6.35833 11.548 6.23958 11.644 6.14375C11.74 6.04792 11.8589 6 12.0008 6C12.1426 6 12.2612 6.04792 12.3567 6.14375C12.4522 6.23958 12.5 6.35833 12.5 6.5V11.5H17.5C17.6417 11.5 17.7604 11.548 17.8563 11.644C17.9521 11.74 18 11.8589 18 12.0008C18 12.1426 17.9521 12.2612 17.8563 12.3567C17.7604 12.4522 17.6417 12.5 17.5 12.5H12.5V17.5C12.5 17.6417 12.452 17.7604 12.356 17.8563C12.26 17.9521 12.1411 18 11.9993 18C11.8574 18 11.7388 17.9521 11.6433 17.8563C11.5478 17.7604 11.5 17.6417 11.5 17.5V12.5Z"
            />
          </svg>
          Tab Title 3
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
    </ul>
  </div>
  <div>
    <div
      aria-hidden="false"
      aria-labelledby=":r9:-Tab-Title-1"
      id=":r8:"
      role="tabpanel"
    >
      <div
        class="max-w-[576px]"
      >
        <h3
          class="_text_b3eba3 _text--headline-sm_b3eba3 mb-spacing-size-3"
        >
          Tab 1
        </h3>
        <p
          class="_text_b3eba3 _text--body-md_b3eba3"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
           
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TabGroup /> > WithTabIllustrations story renders snapshot 1`] = `
<div
  class="_tabs_5bfe90"
>
  <div
    class="_tabs__header_5bfe90"
  >
    <ul
      class="_tabs__list_5bfe90 _tabs--has-divider_5bfe90 _tabs__list--align-center_5bfe90 _tabs__list--variant-default_5bfe90"
      role="tablist"
    >
      <li
        class="_tabs__item_5bfe90 _eds-is-active_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":ra:"
          aria-selected="true"
          class="_tabs__link_5bfe90"
          href="#:ra:"
          id=":rb:-Tab-Title-1"
          role="tab"
          tabindex="0"
        >
          <div
            class="_tab__illustration_5bfe90"
          >
            <div
              class="h-spacing-size-6 w-spacing-size-6 bg-utility-warning-lowEmphasis"
            />
          </div>
          Tab Title 1
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":ra:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:ra:"
          id=":rb:-Tab-Title-2"
          role="tab"
          tabindex="-1"
        >
          <div
            class="_tab__illustration_5bfe90"
          >
            <div
              class="h-spacing-size-6 w-spacing-size-6 bg-utility-warning-lowEmphasis"
            />
          </div>
          Tab Title 2
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":ra:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:ra:"
          id=":rb:-Tab-Title-3"
          role="tab"
          tabindex="-1"
        >
          <div
            class="_tab__illustration_5bfe90"
          >
            <div
              class="h-spacing-size-6 w-spacing-size-6 bg-utility-warning-lowEmphasis"
            />
          </div>
          Tab Title 3
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
    </ul>
  </div>
  <div>
    <div
      aria-hidden="false"
      aria-labelledby=":rb:-Tab-Title-1"
      id=":ra:"
      role="tabpanel"
    >
      <div
        class="max-w-[576px]"
      >
        <h3
          class="_text_b3eba3 _text--headline-sm_b3eba3 mb-spacing-size-3"
        >
          Tab 1
        </h3>
        <p
          class="_text_b3eba3 _text--body-md_b3eba3"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
           
        </p>
      </div>
    </div>
  </div>
</div>
`;
